# HUJI-C-Cpp

ex1/: CMakeLists.txt  README.md  cipher.c
ex2/: CMakeLists.txt  README.md  manageStudents.c
ex3/: CMakeLists.txt  README.md  tweetsGenerator.c
ex4/: CMakeLists.txt  Makefile  hash_funcs.h  hashmap.c  main.c  vector.c
ex5/: Activation.cpp  Activation.h  CMakeLists.txt  Dense.cpp  Dense.h  Matrix.cpp  Matrix.h  MlpNetwork.cpp  MlpNetwork.h  main.cpp  plot_img.py
ex6/: CMakeLists.txt  README.md  highest_student_grade.cpp  vl_string.h  vl_vector.h
ex6/examples/: highest_student_grade.cpp
